# etl_ochestration_peter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: config.py  dag.py  database.py  exampledag.py  logger_config.py  models.py  utils.py
