[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
python-decouple = "3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
